--- a/src/main/resources/templates/admin/create-agent.html
+++ b/src/main/resources/templates/admin/create-agent.html
@@ -387,6 +387,7 @@
             </div>
 
             <form id="createAgentForm" th:action="@{/user/admin/create-agent}" th:object="${createAgentRequest}" method="post">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                 <h3 class="section-title">
                     <i class="fas fa-id-card"></i>
                     Informations personnelles
